--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+*{
+  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box;    
+  box-sizing: border-box; 
+  margin:0%;
+  padding: 0%;
+  
+}
 .App {
+  background-color: blanchedalmond;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.main{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin:auto;
+  width: 125vh;
+  
+  
 }
+#menuEditor{
+  
+  width: 65%;
+  margin-bottom: 20px;
+}
+.menu{
+  margin: auto;
+  box-shadow: 0px 0px 10px .5px rgba(0,0,0,.6);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+#preview,#editor, .menu{
+  background-color: #d6aa93;
+}
+#editor{
+  width: 100%;
+  resize: vertical;
+  min-height: 200px;
+  margin-bottom: -1%;
+}
+#preview{
+  min-height: 150px;
+  text-align: justify;
+  padding: 20px;
+ 
+}
+#preview > *{
+ margin-bottom: 10px; 
+}
+code,pre{
+  background-color: white;
+}
+img{
+  max-width: 100%;
+}
+table {
+  width: 100%;
+}
+ol{
+  padding-left: 25px;
+}
+ul{
+  padding-left: 25px;
+}
+blockquote{
+  font: 14px/22px normal helvetica, sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+  padding-left: 15px;
+  border-left: 3px solid black;
+}
+table, th, td {
+  border: 1px solid;
+}
+table {
+  border-collapse: collapse;
 }
